Make sure the tracklist alignes with the artist box on the requiredlistening section.

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -84,9 +84,9 @@ h1
   font-size: 2em
 
 .artist
-  margin-top: 20px
   opacity: 0.7
   background = !boxbackground
+  margin-top: 20px
   +border-radius
   +hover
 
@@ -101,7 +101,6 @@ h1
   padding-top: 50px
 
 .tracklist
-  padding-top: 10px
   padding-bottom: 10px
 
   a
@@ -144,6 +143,9 @@ h1
 .listing
   padding-top: 20px
   width: 100%
+
+  .tracklist
+    margin-top: 20px
 
 #main
   height: 500px
